# spejs

./: .clang-format  .gitignore  CMakeLists.txt  go.work  go.work.sum  package-lock.json  package.json  ts.cmake  tsconfig.json  util.cmake  vite.config.ts
cli/: cli.cmake  go.mod  main.go
cli/proto/: fixup_js_proto.go
client/: client.cmake  foo.ts  index.css  index.html  main.ts  proto.ts  qoi.ts
cmake/: FindGLFW.cmake.template  FindGLM.cmake.template  FindGlad.cmake.template  FindQOI.cmake.template  FindgRPC.cmake.template  go.cmake  proto.cmake  util.cmake
common_cpp/: common.h  math.h
curses/: curses.go  go.mod  go.sum
frontend/: frontend.cmake  go.mod  go.sum  job.go  main.go  task.go  universe.go
gl/glpp/: common.h  shaders.h  vertex_buffer.h
gl/shader_bundler/: main.go  shader_bundler.cmake
gl_cpp/: common.h  gl.h  gl_cpp.cmake  guard.h  shaders.cpp  shaders.h  texture.h  vertex_buffer.h
launcher/: go.mod  go.sum  grpc_job_service.go  job.go  job_service.go  launcher.cmake  launcher.go  log.go  main.go  rest_job_service.go
proto/: empty.proto  job.proto  proto.cmake  skybox.proto  task.proto  universe.proto
shader_bundler/: go.mod  main.go
src/client/: CMakeLists.txt  client.cmake  index.html  index.tmpl  main.ts
src/common/cpp/: common.h
src/frontend/: CMakeLists.txt  go.mod  go.sum  job.go  main.go  universe.go
src/gl/glpp/: common.cpp  gl.h  glpp.cmake  shaders.cpp  shaders.h  transfer_types.h  vertex_buffer.h
src/launcher/: CMakeLists.txt  go.mod  job.go  launcher.cmake  launcher.go  log.go  main.go
src/proto/: CMakeLists.txt  job.proto  proto.cmake  universe.proto
src/universe/: CMakeLists.txt  gl.cpp  gl.h  job.cpp  job.h  rpc.cpp  rpc.h  shaders.h  tasks.h  ui.cpp  ui.h  universe.cmake  universe.cpp  universe.h  universe_server.cpp
src/universe/shaders/: solid_f.glsl  solid_v.glsl
universe/: common.h  job.cpp  job.h  math.h  proto.h  rpc.cpp  rpc.h  shaders.h  skybox.cpp  skybox.h  task.cpp  task.h  tasks.cpp  ui.cpp  ui.h  universe.cmake  universe.cpp  universe.h  universe_server.cpp
universe/proto/: dummy.proto  skybox.proto  task.proto
universe/shaders/: basic_f.glsl  basic_v.glsl  skybox_f.glsl  skybox_preview_v.glsl  solid_f.glsl
